--- a/FictiveKin/FictiveKin/GUI/Base.lproj/Main.storyboard
+++ b/FictiveKin/FictiveKin/GUI/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YB3-k1-4uJ">
-                                <rect key="frame" x="20" y="423" width="374" height="50"/>
+                                <rect key="frame" x="20" y="426" width="374" height="44"/>
                                 <color key="tintColor" name="textColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="fYS-k0-LQp"/>
+                                    <constraint firstAttribute="height" constant="44" id="pP0-4f-QsA"/>
                                 </constraints>
                                 <color key="textColor" name="textColor"/>
                                 <fontDescription key="fontDescription" name="HoeflerText-Regular" family="Hoefler Text" pointSize="30"/>
@@ -29,10 +29,10 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="PzF-m7-hS7"/>
                                 </connections>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GdO-Qr-XCE">
-                                <rect key="frame" x="20" y="481" width="374" height="50"/>
+                            <button opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GdO-Qr-XCE">
+                                <rect key="frame" x="20" y="478" width="374" height="42"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="5PO-Pe-Szt"/>
+                                    <constraint firstAttribute="height" constant="42" id="rub-sC-32W"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="HoeflerText-Regular" family="Hoefler Text" pointSize="30"/>
                                 <state key="normal" title="Search">
@@ -45,12 +45,12 @@
                         </subviews>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
-                            <constraint firstItem="GdO-Qr-XCE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="16Q-rr-ywZ"/>
-                            <constraint firstItem="YB3-k1-4uJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="2L3-Yw-S1q"/>
-                            <constraint firstItem="GdO-Qr-XCE" firstAttribute="top" secondItem="YB3-k1-4uJ" secondAttribute="bottom" constant="8" id="J4i-sv-yOW"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YB3-k1-4uJ" secondAttribute="trailing" constant="20" id="dtP-1H-Sg0"/>
-                            <constraint firstItem="YB3-k1-4uJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="tUe-zc-weA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GdO-Qr-XCE" secondAttribute="trailing" constant="20" id="z4i-JL-Yut"/>
+                            <constraint firstItem="YB3-k1-4uJ" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Qjm-vL-YSv"/>
+                            <constraint firstItem="GdO-Qr-XCE" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="cuh-KX-gab"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YB3-k1-4uJ" secondAttribute="trailing" constant="20" id="d61-pn-TIt"/>
+                            <constraint firstItem="GdO-Qr-XCE" firstAttribute="top" secondItem="YB3-k1-4uJ" secondAttribute="bottom" constant="8" id="f3k-HP-1kt"/>
+                            <constraint firstItem="YB3-k1-4uJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hhh-67-E0M"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GdO-Qr-XCE" secondAttribute="trailing" constant="20" id="pPO-GR-Ioo"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -70,6 +70,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vRc-je-XSs" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="s15-pm-MZp">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
